[gd_scene load_steps=14 format=3 uid="uid://s7h7q4p51bly"]

[ext_resource type="Script" path="res://scripts/battle/drawing.gd" id="1_6mxgf"]
[ext_resource type="Texture2D" uid="uid://cqgf63lpvem7j" path="res://sprites/paper/stickyNote.png" id="1_cmh6u"]
[ext_resource type="Texture2D" uid="uid://dhpgrnqjuqdk1" path="res://sprites/friends/Geobro.png" id="3_bm87v"]

[sub_resource type="Animation" id="Animation_ttoio"]
resource_name = "Intro"
length = 1.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 1.3),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1, 1.2, 1.3),
"transitions": PackedFloat32Array(-2, -2, 1),
"update": 0,
"values": [-0.785398, 0.0872665, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1, 1.2, 1.3),
"transitions": PackedFloat32Array(-2, -2, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(0.95, 0.95), Vector2(1, 1)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"finish_intro"
}]
}

[sub_resource type="Animation" id="Animation_gue58"]
resource_name = "Popup"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 0.8),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 0.7, 0.8),
"transitions": PackedFloat32Array(-2, -2, 1),
"update": 0,
"values": [-0.785398, 0.0872665, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 0.7, 0.8),
"transitions": PackedFloat32Array(-2, -2, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(0.95, 0.95), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Base:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Shadow:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_v7com"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.785398]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_qi1sc"]
resource_name = "SwitchEnemy"
length = 1.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Base:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 1.4),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(128, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shadow:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1, 1.4),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(129, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"send_out"
}]
}

[sub_resource type="Animation" id="Animation_p5gty"]
resource_name = "SwitchFriend"
length = 1.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Base:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 1.4),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-128, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shadow:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1, 1.4),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(-127, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"send_out"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8a5ov"]
_data = {
"Intro": SubResource("Animation_ttoio"),
"Popup": SubResource("Animation_gue58"),
"RESET": SubResource("Animation_v7com"),
"SwitchEnemy": SubResource("Animation_qi1sc"),
"SwitchFriend": SubResource("Animation_p5gty")
}

[sub_resource type="Animation" id="Animation_agqq3"]
resource_name = "HurtEnemy"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Base:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(-2, -2, -2, -2, -2, -2, -2),
"update": 0,
"values": [Vector2(6, 0), Vector2(-5, 0), Vector2(4, 0), Vector2(-3, 0), Vector2(2, 0), Vector2(-1, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shadow:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(-2, -2, -2, -2, -2, -2, -2),
"update": 0,
"values": [Vector2(7, 1), Vector2(-4, 1), Vector2(5, 1), Vector2(-2, 1), Vector2(3, 1), Vector2(0, 1), Vector2(1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [null],
"method": &"finish_turn"
}]
}

[sub_resource type="Animation" id="Animation_0krbk"]
resource_name = "HurtFriend"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Base:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(-2, -2, -2, -2, -2, -2, -2),
"update": 0,
"values": [Vector2(-6, 0), Vector2(5, 0), Vector2(-4, 0), Vector2(3, 0), Vector2(-2, 0), Vector2(1, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shadow:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(-2, -2, -2, -2, -2, -2, -2),
"update": 0,
"values": [Vector2(-5, 1), Vector2(6, 1), Vector2(-3, 1), Vector2(4, 1), Vector2(-1, 1), Vector2(2, 1), Vector2(1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [null],
"method": &"finish_turn"
}]
}

[sub_resource type="Animation" id="Animation_popp0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Base:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shadow:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ownfn"]
_data = {
"HurtEnemy": SubResource("Animation_agqq3"),
"HurtFriend": SubResource("Animation_0krbk"),
"RESET": SubResource("Animation_popp0")
}

[node name="Drawing" type="Node2D"]
modulate = Color(1, 1, 1, 0)
texture_filter = 1
rotation = -0.785398
scale = Vector2(2, 2)
script = ExtResource("1_6mxgf")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.196078)
position = Vector2(1, 1)
texture = ExtResource("1_cmh6u")
hframes = 6

[node name="Base" type="Sprite2D" parent="."]
texture = ExtResource("1_cmh6u")
hframes = 6

[node name="Drawing" type="Sprite2D" parent="Base"]
position = Vector2(-0.5, -0.5)
texture = ExtResource("3_bm87v")
metadata/_edit_lock_ = true

[node name="Animate" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8a5ov")
}

[node name="AnimateAttacks" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ownfn")
}

[node name="DelayAttack" type="Timer" parent="."]
one_shot = true

[node name="DelaySwitch" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[connection signal="timeout" from="DelayAttack" to="." method="_on_delay_attack_timeout"]
[connection signal="timeout" from="DelaySwitch" to="." method="_on_delay_switch_timeout"]
